@@ -40,10 +40,10 @@ Configurable Mods|kor$모드 설정|spa$Mods configurables|fre$Mods configurable
 Other Mods|kor$기타 모드|spa$Otros Mods|fre$Autres Mods|rus$Другие моды
 Scroll Up|kor$위로 이동|spa$Subir|fre$Défiler vers le haut|rus$Прокрутить вверх
 Scroll Down|kor$아래로 이동|spa$Bajar|fre$Défiler vers le bas|rus$Прокрутить вниз
-Click to Display Config Machine ChangeLog|kor$클릭해서 Config Machine의 변경 내역 보기
+Click to Display Config Machine ChangeLog|kor$클릭해서 Config Machine의 변경 내역 보기|spa$Haz clic para mostrar la lista de cambios de Config Machine
 Config Machine ChangeLog|spa$Config Machine Lista de cambios|kor$Config Machine 변경 내역
-This plugin contains types of settings that are not supported by Config Machine:|kor$이 플러그인에는 Config Machine이 지원하지 않는 설정이 있습니다:
-Go to [BepInEx]-[config] folder and use Notepad to edit those settings.|kor$[BepInEx]-[config] 폴더에 가서 메모장으로 설정을 수정하세요.
+This Plugin contains types of settings that are not supported by Config Machine:|kor$이 플러그인에는 Config Machine이 지원하지 않는 설정이 있습니다:|spa$Este Plugin contiene ciertas opciones que no funcionan con Config Machine:
+Go to [BepInEx]-[config] folder and use Notepad to edit those settings.|kor$[BepInEx]-[config] 폴더에 가서 메모장으로 설정을 수정하세요.|spa$Navega a la carpeta [BepInEx]-[config] y usa el bloc de notas para editar esas opciones.
 
 /// Description for provided UIelements ///
 Click to Check/Uncheck|kor$클릭해서 체크 및 해제|spa$Click para marcar/desmarcar|fre$Cliquez pour cocher/décocher|rus$Нажмите, чтобы отметить/снять отметку
